# Trash-Collection-Robot

./: Cursor.lnk  Readme.md
CMakeLists/: CMakeLists.txt
launch/: mapping.launch  navigation.launch  object_detection.launch
package/: package.xml
scripts/: drop_trash.py  move_to_trash.py  pick_trash.py
worlds/: trash_world.world
