<?xml version="1.0"?>
<package format="2">
  <name>trash_collection_robot</name>
  <version>1.0.0</version>
  <description>A ROS package for autonomous trash collection robot using TurtleBot3</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/yourusername/trash-collection-robot</url>
  <url type="bugtracker">https://github.com/yourusername/trash-collection-robot/issues</url>
  <url type="repository">https://github.com/yourusername/trash-collection-robot</url>

  <author email="your_email@example.com">Your Name</author>

  <buildtool_depend>catkin</buildtool_depend>

 
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

 
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

 
  <build_depend>gmapping</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>map_server</build_depend>

  
  <build_depend>turtlebot3_msgs</build_depend>
  <build_depend>turtlebot3_bringup</build_depend>
  <build_depend>turtlebot3_navigation</build_depend>
  <build_depend>turtlebot3_slam</build_depend>

  
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

 
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>


  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
  </export>
</package>